--- a/sections/collections.liquid
+++ b/sections/collections.liquid
@@ -2,7 +2,7 @@
     .collection-c-1 {
         background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
         url({{ 'collection-c-1.png' |  asset_img_url: '1480x986' }});
-        background-size: 150%;
+        background-size: 160%;
         background-position: 50% 50%;
         background-repeat: no-repeat;
     }
@@ -95,7 +95,7 @@
         <div class="flex flex-col gap-[24px]">
             <div class="flex flex-col lg:flex-row gap-[24px]">
                 <div
-                    class="collection-c-1 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
+                    class="collection-c-1 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Pane collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">A bold, yet animated, sleepwear collection
@@ -106,7 +106,7 @@
                     </a>
                 </div>
                 <div
-                    class="collection-c-2 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
+                    class="collection-c-2 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Tuft collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">An iconic sleepwear collection,<br>comprised of
@@ -119,7 +119,7 @@
             </div>
             <div class="flex flex-col lg:flex-row gap-[24px]">
                 <div
-                    class="collection-c-3 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
+                    class="collection-c-3 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Blossom collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">A feminine flow of garden fancies,<br>sweetly
@@ -130,7 +130,7 @@
                     </a>
                 </div>
                 <div
-                    class="collection-c-4 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
+                    class="collection-c-4 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Wildflower<br
                                 class="md:hidden">
@@ -146,7 +146,7 @@
             </div>
             <div class="flex flex-col lg:flex-row gap-[24px]">
                 <div
-                    class="collection-c-5 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
+                    class="collection-c-5 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Foilage collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">Our berry and brush toned play sets introduce
@@ -157,7 +157,7 @@
                     </a>
                 </div>
                 <div
-                    class="collection-c-6 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
+                    class="collection-c-6 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Fall collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">An iconic sleepwear collection,<br>comprised of
