--- a/sections/content-three.liquid
+++ b/sections/content-three.liquid
@@ -15,7 +15,7 @@
 
 <section class="w-full bg-white">
     <div class="py-[64px] px-[25px] flex flex-col lg:flex-row gap-[40px] lg:gap-[52px] lg:p-[104px] max-w-[1280px] mx-auto">
-        <div class="content-two-bg h-[440px] lg:h-auto lg:w-[45%] w-full rounded-2xl">
+        <div class="content-two-bg h-[400px] min-[425px]:h-[440px] lg:h-auto lg:w-[45%] w-full rounded-2xl">
         </div>
         <div class="flex flex-col gap-[24px] lg:w-[55%]">
             <div class="text-[28px] font-semibold leading-9 lg:text-[32px] lg:leading-10">
