--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -51,7 +51,7 @@
         </div>
 
         <menu x-bind:class='open ? "translate-y-[0px]" : ""'
-            class="md:hidden flex fixed -z-10 bg-[#e7d7b6] w-full -translate-y-[128px] transition-all ease-in-out duration-300 flex-col p-4">
+            class="md:hidden flex absolute -z-10 bg-[#e7d7b6] w-full -translate-y-[128px] transition-all ease-in-out duration-300 flex-col p-4">
             {% for link in linklists['main-menu'].links %}
                 <a href="{{ link.url }}">{{ link.title }}</a>
             {% endfor %}
