finalized the different screen size

--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -18,15 +18,15 @@
 </style>
 
 <section class="bg-[#D2CBB8] py-[64px] px-[25px] flex flex-col gap-10 cta-bg">
-    <div class="flex flex-col gap-6 lg:gap-4 lg:text-center">
-        <h1 class="font-semibold text-[28px] leading-9 lg:text-[40px] lg:leading-[50px]">Get notified about <br class="lg:hidden">exclusive deals</h1>
+    <div class="flex flex-col gap-6 lg:gap-4 md:text-center">
+        <h1 class="font-semibold text-[28px] leading-9 lg:text-[40px] lg:leading-[50px]">Get notified about <br class="md:hidden">exclusive deals</h1>
         <p class="text-[18px] leading-6 lg:text-xl lg:leading-6">
-            Subscribe to get special offers, free <br class="lg:hidden">giveaways and early access. <br>We promise to send emails you will
+            Subscribe to get special offers, free <br class="md:hidden">giveaways and early access. <br>We promise to send emails you will
             love.
         </p>
     </div>
-    <form class="flex flex-col lg:flex-row items-start lg:items-center lg:justify-center gap-3">
-        <input class="w-full lg:w-[508px] p-[17px] rounded-md" placeholder="heyy@email.com">
+    <form class="flex flex-col md:flex-row items-start md:items-center md:justify-center gap-3">
+        <input class="w-full md:w-[508px] p-[17px] rounded-md" placeholder="heyy@email.com">
         <button class="bg-[#445442] text-white text-sm font-causten font-medium tracking-wider leading-4 px-6 py-5 rounded-md">
             GET DEALS
         </button>
