--- a/sections/collections.liquid
+++ b/sections/collections.liquid
@@ -57,9 +57,9 @@
         border-radius: 6px;
     }
 
-    @media (min-width: 1024px) {
+    @media (min-width: 768px) {
         .collection-c-1 {
-            background-size: 150%;
+            background-size: 160%;
             background-position: 50% 50%;
         }
 
@@ -74,12 +74,12 @@
         }
 
         .collection-c-4 {
-            background-size: 100%;
+            background-size: 105%;
             background-position: 50% 50%;
         }
 
         .collection-c-5 {
-            background-size: 150%;
+            background-size: 156%;
             background-position: 50% 30%;
         }
 
@@ -91,11 +91,11 @@
 </style>
 
 <div class="bg-[#F6F0E4]">
-    <div class="py-[64px] px-[25px] lg:p-[104px] max-w-[1280px] mx-auto">
-        <div class="flex flex-col gap-[24px]">
-            <div class="flex flex-col lg:flex-row gap-[24px]">
+    <div class="py-[64px] px-[25px] lg:p-[104px] max-w-[1440px] mx-auto">
+        <div class="flex flex-col gap-[16px]">
+            <div class="flex flex-col md:flex-row gap-[16px]">
                 <div
-                    class="collection-c-1 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
+                    class="collection-c-1 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] md:w-1/2 rounded-2xl flex flex-col gap-[16px] justify-center items-center lg:min-w-[650px]">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Pane collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">A bold, yet animated, sleepwear collection
@@ -106,7 +106,7 @@
                     </a>
                 </div>
                 <div
-                    class="collection-c-2 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
+                    class="collection-c-2 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] md:w-1/2 rounded-2xl flex flex-col gap-[16px] justify-center items-center lg:w-full">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Tuft collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">An iconic sleepwear collection,<br>comprised of
@@ -117,9 +117,9 @@
                     </a>
                 </div>
             </div>
-            <div class="flex flex-col lg:flex-row gap-[24px]">
+            <div class="flex flex-col md:flex-row gap-[16px]">
                 <div
-                    class="collection-c-3 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
+                    class="collection-c-3 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] md:w-1/2 rounded-2xl flex flex-col gap-[16px] justify-center items-center lg:w-full">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Blossom collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">A feminine flow of garden fancies,<br>sweetly
@@ -130,7 +130,7 @@
                     </a>
                 </div>
                 <div
-                    class="collection-c-4 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
+                    class="collection-c-4 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] md:w-1/2 rounded-2xl flex flex-col gap-[16px] justify-center items-center lg:min-w-[650px]">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Wildflower<br
                                 class="md:hidden">
@@ -144,9 +144,9 @@
                     </a>
                 </div>
             </div>
-            <div class="flex flex-col lg:flex-row gap-[24px]">
+            <div class="flex flex-col md:flex-row gap-[16px]">
                 <div
-                    class="collection-c-5 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
+                    class="collection-c-5 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] md:w-1/2 rounded-2xl flex flex-col gap-[16px] justify-center items-center lg:min-w-[650px]">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Foilage collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">Our berry and brush toned play sets introduce
@@ -157,7 +157,7 @@
                     </a>
                 </div>
                 <div
-                    class="collection-c-6 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
+                    class="collection-c-6 transition-all ease-in-out duration-300 h-[260px] min-[425px]:h-[360px] lg:h-[600px] md:w-1/2 rounded-2xl flex flex-col gap-[16px] justify-center items-center lg:w-full">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Fall collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">An iconic sleepwear collection,<br>comprised of
