--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -12,10 +12,10 @@
 </style>
 
 <section class="h-auto w-full flex justify-center items-center hero-bg-img">
-    <div class="py-[196px] md:hidden">
+    <div class="py-[196px] md:pt-[320px] md:pb-[140px] lg:hidden">
         {% render 'hero-content-mobile' %}
     </div>
-    <div class="hidden md:flex justify-center w-full p-20 py-20 md:py-36 md:px-32 lg:py-[256px] lg:px-[184px] max-w-[1280px]">{% render 'hero-content' %}</div>
+    <div class="hidden lg:flex justify-center w-full p-20 py-20 md:py-36 md:px-32 lg:py-[256px] lg:px-[184px] max-w-[1440px]">{% render 'hero-content' %}</div>
 </section>
 
 
