--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -4,7 +4,7 @@
             <div class="flex-1">
                 <div class="flex items-end justify-between my-5">
                     <h1 class="text-3xl">Your cart</h1>
-                    <a href="{{ routes.all_products_collectiom_url }}" class="text-blue-600 hover:text-blue-800 font-medium underline">Continue shopping</a>
+                    <a href="/collections/all" class="text-blue-600 hover:text-blue-800 font-medium underline">Continue shopping</a>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
             <h1 class="text-3xl my-4">Your cart is empty</h1>
 
             <div class="my-4 py-4">
-                <a href="{{ routes.all_products_collection_url }}" class="border border-gray-600 text-white bg-gray-600 px-8 py-3">Continue shopping</a>
+                <a href="/collections/all" class="border border-gray-600 text-white bg-gray-600 px-8 py-3">Continue shopping</a>
             </div>
         </div>
     </div>
