--- a/assets/application.css
+++ b/assets/application.css
@@ -554,38 +554,12 @@ video {
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
+.visible {
+  visibility: visible;
 }
 
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
+.invisible {
+  visibility: hidden;
 }
 
 .fixed {
@@ -620,6 +594,138 @@ video {
   top: 0px;
 }
 
+.top-\[38px\] {
+  top: 38px;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.top-auto {
+  top: auto;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.top-1\/3 {
+  top: 33.333333%;
+}
+
+.top-\[\] {
+  top: ;
+}
+
+.top-\[40\%\] {
+  top: 40%;
+}
+
+.top-\[47\%\] {
+  top: 47%;
+}
+
+.top-\[37\%\] {
+  top: 37%;
+}
+
+.top-\[37\] {
+  top: 37;
+}
+
+.top-\[36\%\] {
+  top: 36%;
+}
+
+.top-\[35\%\] {
+  top: 35%;
+}
+
+.top-\[34\%\] {
+  top: 34%;
+}
+
+.top-\[33\%\] {
+  top: 33%;
+}
+
+.top-\[32\%\] {
+  top: 32%;
+}
+
+.top-\[31\%\] {
+  top: 31%;
+}
+
+.top-\[31\.5\%\] {
+  top: 31.5%;
+}
+
+.top-\[31\.7\%\] {
+  top: 31.7%;
+}
+
+.top-\[31\.9\%\] {
+  top: 31.9%;
+}
+
+.top-\[31\.8\%\] {
+  top: 31.8%;
+}
+
+.top-\[50\%\] {
+  top: 50%;
+}
+
+.top-\[100\%\] {
+  top: 100%;
+}
+
+.top-\[90\%\] {
+  top: 90%;
+}
+
+.top-\[98\%\] {
+  top: 98%;
+}
+
+.top-\[198\%\] {
+  top: 198%;
+}
+
+.top-\[200\%\] {
+  top: 200%;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.right-\[100\%\] {
+  right: 100%;
+}
+
+.right-\[1\%\] {
+  right: 1%;
+}
+
+.left-\[1\%\] {
+  left: 1%;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -638,6 +744,42 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.z-\[51\] {
+  z-index: 51;
+}
+
+.z-\[\] {
+  z-index: ;
+}
+
+.z-\[100\] {
+  z-index: 100;
+}
+
+.z-\[6\] {
+  z-index: 6;
+}
+
+.z-\[1000\] {
+  z-index: 1000;
+}
+
+.z-\[99\] {
+  z-index: 99;
+}
+
+.z-\[-1\] {
+  z-index: -1;
+}
+
+.z-\[-2\] {
+  z-index: -2;
+}
+
+.z-\[60\] {
+  z-index: 60;
 }
 
 .-my-\[3px\] {
@@ -695,6 +837,16 @@ video {
   margin-bottom: 2rem;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.my-\[15px\] {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 .-ml-\[3px\] {
   margin-left: -3px;
 }
@@ -725,10 +877,6 @@ video {
 
 .ml-7 {
   margin-left: 1.75rem;
-}
-
-.mt-auto {
-  margin-top: auto;
 }
 
 .block {
@@ -792,12 +940,12 @@ video {
   height: 1px;
 }
 
-.h-\[360px\] {
-  height: 360px;
+.h-\[260px\] {
+  height: 260px;
 }
 
-.h-\[440px\] {
-  height: 440px;
+.h-\[400px\] {
+  height: 400px;
 }
 
 .h-auto {
@@ -812,60 +960,40 @@ video {
   height: 100vh;
 }
 
-.h-\[200px\] {
-  height: 200px;
+.h-10 {
+  height: 2.5rem;
 }
 
-.h-\[270px\] {
-  height: 270px;
+.h-\[180px\] {
+  height: 180px;
 }
 
-.h-\[290px\] {
-  height: 290px;
+.h-\[156px\] {
+  height: 156px;
 }
 
-.h-\[300px\] {
-  height: 300px;
+.max-h-0 {
+  max-height: 0px;
 }
 
-.h-\[310px\] {
-  height: 310px;
-}
-
-.h-\[294px\] {
-  height: 294px;
-}
-
-.h-\[285px\] {
-  height: 285px;
-}
-
-.h-\[280px\] {
-  height: 280px;
-}
-
-.h-\[20px\] {
-  height: 20px;
-}
-
-.h-\[260px\] {
-  height: 260px;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[400px\] {
-  height: 400px;
+.min-h-full {
+  min-height: 100%;
 }
 
 .w-0 {
   width: 0px;
 }
 
+.w-0\.5 {
+  width: 0.125rem;
+}
+
 .w-20 {
   width: 5rem;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .w-5 {
@@ -884,6 +1012,23 @@ video {
   width: 100%;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
 .min-w-\[222px\] {
   min-width: 222px;
 }
@@ -896,12 +1041,16 @@ video {
   max-width: 72rem;
 }
 
-.max-w-\[1280px\] {
-  max-width: 1280px;
+.max-w-\[1440px\] {
+  max-width: 1440px;
 }
 
 .max-w-md {
   max-width: 28rem;
+}
+
+.max-w-\[1280px\] {
+  max-width: 1280px;
 }
 
 .flex-1 {
@@ -922,8 +1071,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-\[100\%\] {
-  --tw-translate-y: -100%;
+.-translate-y-\[128px\] {
+  --tw-translate-y: -128px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -937,58 +1086,38 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-y-\[0px\] {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[100\%\] {
+  --tw-translate-y: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-y-\[0\%\] {
   --tw-translate-y: 0%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-\[0\%\] {
-  --tw-translate-y: -0%;
+.translate-y-\[100px\] {
+  --tw-translate-y: 100px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-\[100px\] {
-  --tw-translate-y: -100px;
+.-translate-x-\[100\%\] {
+  --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-\[120px\] {
-  --tw-translate-y: -120px;
+.translate-x-\[0\%\] {
+  --tw-translate-x: 0%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-\[123px\] {
-  --tw-translate-y: -123px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-\[125px\] {
-  --tw-translate-y: -125px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-\[129px\] {
-  --tw-translate-y: -129px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-\[128px\] {
-  --tw-translate-y: -128px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-\[127px\] {
-  --tw-translate-y: -127px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[0\] {
-  --tw-translate-y: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[0px\] {
-  --tw-translate-y: 0px;
+.translate-x-\[100\%\] {
+  --tw-translate-x: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1098,6 +1227,10 @@ video {
   gap: 2rem;
 }
 
+.gap-\[16px\] {
+  gap: 16px;
+}
+
 .gap-\[20px\] {
   gap: 20px;
 }
@@ -1108,6 +1241,26 @@ video {
 
 .gap-\[40px\] {
   gap: 40px;
+}
+
+.gap-\[px\] {
+  gap: px;
+}
+
+.gap-\[0px\] {
+  gap: 0px;
+}
+
+.gap-\[4px\] {
+  gap: 4px;
+}
+
+.gap-\[8px\] {
+  gap: 8px;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]) {
@@ -1157,9 +1310,45 @@ video {
   border-width: 1px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-b-\[1px\] {
+  border-bottom-width: 1px;
+}
+
 .border-gray-600 {
   --tw-border-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
+.border-cyan-50 {
+  --tw-border-opacity: 1;
+  border-color: rgb(236 254 255 / var(--tw-border-opacity));
+}
+
+.border-\[bg-\[\#948b76\]\] {
+  border-color: bg-[#948b76];
+}
+
+.border-\[\#948b76\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(148 139 118 / var(--tw-border-opacity));
+}
+
+.border-\[\#d6d3cb\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(214 211 203 / var(--tw-border-opacity));
+}
+
+.border-\[\#464034\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(70 64 52 / var(--tw-border-opacity));
 }
 
 .bg-\[\#445442\] {
@@ -1172,6 +1361,11 @@ video {
   background-color: rgb(79 79 79 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#77705F\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(119 112 95 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#D2CBB8\] {
   --tw-bg-opacity: 1;
   background-color: rgb(210 203 184 / var(--tw-bg-opacity));
@@ -1180,6 +1374,11 @@ video {
 .bg-\[\#F6F0E4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(246 240 228 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#a7a6a6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 166 166 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#e7d7b6\] {
@@ -1220,6 +1419,42 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#000000\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#948b76\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 139 118 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-15 {
+  --tw-bg-opacity: 0.15;
+}
+
+.bg-opacity-10 {
+  --tw-bg-opacity: 0.1;
+}
+
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
+}
+
+.bg-opacity-0 {
+  --tw-bg-opacity: 0;
 }
 
 .fill-\[\#445442\] {
@@ -1265,6 +1500,14 @@ video {
 
 .p-\[17px\] {
   padding: 17px;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .px-1 {
@@ -1367,6 +1610,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.py-\[15px\] {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
 .py-\[173px\] {
   padding-top: 173px;
   padding-bottom: 173px;
@@ -1402,6 +1650,61 @@ video {
   padding-bottom: 64px;
 }
 
+.px-\[\] {
+  padding-left: ;
+  padding-right: ;
+}
+
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-\[38px\] {
+  padding-top: 38px;
+  padding-bottom: 38px;
+}
+
+.py-\[40px\] {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.py-\[37px\] {
+  padding-top: 37px;
+  padding-bottom: 37px;
+}
+
+.py-\[36px\] {
+  padding-top: 36px;
+  padding-bottom: 36px;
+}
+
+.px-32 {
+  padding-left: 8rem;
+  padding-right: 8rem;
+}
+
+.py-\[35px\] {
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
+.px-\[35px\] {
+  padding-left: 35px;
+  padding-right: 35px;
+}
+
+.px-\[100px\] {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.px-\[31px\] {
+  padding-left: 31px;
+  padding-right: 31px;
+}
+
 .pb-\[104px\] {
   padding-bottom: 104px;
 }
@@ -1426,6 +1729,10 @@ video {
   padding-top: 80px;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1434,8 +1741,17 @@ video {
   text-align: center;
 }
 
-.font-default {
+.font-causten {
+  font-family: 'Causten';
+}
+
+.font-nanum {
   font-family: 'Nanum Myeongjo', serif;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -1596,6 +1912,54 @@ video {
   text-decoration-line: line-through;
 }
 
+.opacity-35 {
+  opacity: 0.35;
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-100 {
+  opacity: 1;
+}
+
+.opacity-20 {
+  opacity: 0.2;
+}
+
+.opacity-10 {
+  opacity: 0.1;
+}
+
+.opacity-90 {
+  opacity: 0.9;
+}
+
+.opacity-60 {
+  opacity: 0.6;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.opacity-50 {
+  opacity: 0.5;
+}
+
+.bg-blend-overlay {
+  background-blend-mode: overlay;
+}
+
+.mix-blend-overlay {
+  mix-blend-mode: overlay;
+}
+
+.mix-blend-darken {
+  mix-blend-mode: darken;
+}
+
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -1614,6 +1978,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.backdrop-blur-lg {
+  --tw-backdrop-blur: blur(16px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1628,10 +1998,20 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-transform {
-  transition-property: transform;
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.delay-500 {
+  transition-delay: 500ms;
 }
 
 .duration-1000 {
@@ -1654,22 +2034,6 @@ video {
   font-family: "Nanum Myeongjo", serif;
   font-weight: 100;
   font-style: normal;
-}
-
-.before\:bg-black::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.before\:content-\[asdf\]::before {
-  --tw-content: asdf;
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'asdf\'\]::before {
-  --tw-content: 'asdf';
-  content: var(--tw-content);
 }
 
 .hover\:scale-105:hover {
@@ -1698,20 +2062,6 @@ video {
   background-color: rgb(22 101 52 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-slate-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-slate-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-105\%:hover {
-  background-size: 105%;
-}
-
 .hover\:text-blue-800:hover {
   --tw-text-opacity: 1;
   color: rgb(30 64 175 / var(--tw-text-opacity));
@@ -1736,37 +2086,6 @@ video {
   outline-offset: 2px;
 }
 
-.group:hover .group-hover\:scale-105 {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group\/dog:hover .group-hover\/dog\:bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
-.group\/test:hover .group-hover\/test\:bg-105\% {
-  background-size: 105%;
-}
-
-.peer:hover ~ .peer-hover\:scale-105 {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.peer\/test:hover ~ .peer-hover\/test\:bg-105\% {
-  background-size: 105%;
-}
-
-@media (max-width: 425px) {
-  .max-\[425px\]\:h-\[360px\] {
-    height: 360px;
-  }
-}
-
 @media (min-width: 425px) {
   .min-\[425px\]\:h-\[360px\] {
     height: 360px;
@@ -1778,14 +2097,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm-\[425px\]\:h-\[\] {
-    height: ;
-  }
-
-  .sm-\[425px\]\:h-\[360px\] {
-    height: 360px;
-  }
-
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -1800,6 +2111,10 @@ video {
 @media (min-width: 768px) {
   .md\:left-\[18\%\] {
     left: 18%;
+  }
+
+  .md\:left-\[20\%\] {
+    left: 20%;
   }
 
   .md\:my-16 {
@@ -1823,6 +2138,26 @@ video {
     height: 250px;
   }
 
+  .md\:h-full {
+    height: 100%;
+  }
+
+  .md\:h-\[500px\] {
+    height: 500px;
+  }
+
+  .md\:h-\[260px\] {
+    height: 260px;
+  }
+
+  .md\:h-\[280px\] {
+    height: 280px;
+  }
+
+  .md\:h-\[320px\] {
+    height: 320px;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -1833,6 +2168,34 @@ video {
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:w-\[250px\] {
+    width: 250px;
+  }
+
+  .md\:w-\[300px\] {
+    width: 300px;
+  }
+
+  .md\:w-\[\] {
+    width: ;
+  }
+
+  .md\:w-\[340px\] {
+    width: 340px;
+  }
+
+  .md\:w-auto {
+    width: auto;
+  }
+
+  .md\:w-\[360px\] {
+    width: 360px;
+  }
+
+  .md\:w-\[508px\] {
+    width: 508px;
   }
 
   .md\:max-w-lg {
@@ -1855,6 +2218,34 @@ video {
     flex-direction: row;
   }
 
+  .md\:items-end {
+    align-items: flex-end;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:justify-end {
+    justify-content: flex-end;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
+  }
+
+  .md\:gap-\[56px\] {
+    gap: 56px;
+  }
+
+  .md\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .md\:p-\[104px\] {
+    padding: 104px;
+  }
+
   .md\:px-32 {
     padding-left: 8rem;
     padding-right: 8rem;
@@ -1865,6 +2256,23 @@ video {
     padding-bottom: 9rem;
   }
 
+  .md\:px-\[24px\] {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  .md\:pt-\[320px\] {
+    padding-top: 320px;
+  }
+
+  .md\:pb-\[140px\] {
+    padding-bottom: 140px;
+  }
+
+  .md\:text-center {
+    text-align: center;
+  }
+
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -1872,6 +2280,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:absolute {
+    position: absolute;
+  }
+
   .lg\:left-\[14\%\] {
     left: 14%;
   }
@@ -1892,12 +2304,12 @@ video {
     height: 250px;
   }
 
-  .lg\:h-\[600px\] {
-    height: 600px;
+  .lg\:h-\[480px\] {
+    height: 480px;
   }
 
-  .lg\:h-auto {
-    height: auto;
+  .lg\:h-\[600px\] {
+    height: 600px;
   }
 
   .lg\:w-\[100px\] {
@@ -1952,8 +2364,8 @@ video {
     gap: 2.25rem;
   }
 
-  .lg\:gap-\[52px\] {
-    gap: 52px;
+  .lg\:gap-\[56px\] {
+    gap: 56px;
   }
 
   .lg\:overflow-hidden {
@@ -1982,6 +2394,16 @@ video {
   .lg\:py-\[80px\] {
     padding-top: 80px;
     padding-bottom: 80px;
+  }
+
+  .lg\:py-\[15px\] {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .lg\:text-center {
