--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -12,61 +12,62 @@
     <!-- Header hook for plugins -->
     {{ 'application.css' | asset_url | stylesheet_tag }}
     {{ 'stylesheet.css' | asset_url | stylesheet_tag }}
-    
+
     <script src="{{ 'application.js' | asset_url }}" defer></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.1/dist/cdn.min.js"></script>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
-
 </head>
 
-<body class="bg-gray-100 nanum-myeongjo-regular relative">
+<body x-data="{ open: false, search: false }" class="nanum-myeongjo-regular relative">
 
-    <header x-data="{ open: false }" class="md:hidden sticky top-0 z-50">
-        <div class="flex flex-row justify-between items-center w-full py-[30px] bg-[#F6F0E4] z-50">
-            <button @click="open=!open" class="pl-[20px] flex flex-col gap-1 relative z-50">
-                <div x-bind:class="open ? 'rotate-45 translate-y-1.5' : ''"
-                    class="bg-[#4F4F4F] w-5 h-0.5 transition-all ease-in-out duration-300 z-0"></div>
-                <div x-bind:class="open ? 'w-0' : 'w-5'"
-                    class="bg-[#4F4F4F] h-0.5 transition-all ease-in-out duration-300">
+    <div x-bind:class="search ? 'translate-x-[0%]' : 'translate-x-[100%]'"
+        class="fixed z-[100] px-32 top-0 right-0 bg-white h-full transition-all ease-in-out duration-500 opacity-100">
+        search
+    </div>
+
+    <div>
+        <div x-bind:class="search ? 'h-screen opacity-60' : 'opacity-0'" @click="search=false" class="bg-black w-screen fixed z-[99] transition-opacity ease-in-out duration-500"></div>
+        {% section 'announcement-bar' %}
+
+        <header class="lg:hidden sticky top-0 z-50">
+            <div class="flex flex-row justify-between items-center w-full py-[30px] bg-[#F6F0E4] z-50">
+                <button @click="open=!open" @click.away="open=false" class="pl-[20px] flex flex-col gap-1 relative z-50">
+                    <div x-bind:class="open ? 'rotate-45 translate-y-1.5' : ''"
+                        class="bg-[#4F4F4F] w-5 h-0.5 transition-all ease-in-out duration-300 z-0"></div>
+                    <div x-bind:class="open ? 'w-0' : 'w-5'"
+                        class="bg-[#4F4F4F] h-0.5 transition-all ease-in-out duration-300">
+                    </div>
+                    <div x-bind:class="open ? '-rotate-45 -translate-y-1.5' : ''"
+                        class="bg-[#4F4F4F] w-5 h-0.5 transition-all ease-in-out duration-300"></div>
+                </button>
+                <div class="absolute flex justify-center items-center w-full z-40">
+                    <a href="/" class="fill-black">
+                        {% render 'logo-milk-denmark' %}
+                    </a>
                 </div>
-                <div x-bind:class="open ? '-rotate-45 -translate-y-1.5' : ''"
-                    class="bg-[#4F4F4F] w-5 h-0.5 transition-all ease-in-out duration-300"></div>
-            </button>
-            <div class="absolute flex justify-center items-center w-full z-40">
-                <a href="/" class="fill-black">
-                    {% render 'logo-milk-denmark' %}
-                </a>
+                <div class="flex flex-row gap-3 pr-[20px] z-40">
+                    <a href="{{ routes.cart_url }}"
+                        class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
+                        {% render 'icon-shopping-bag' %}
+                    </a>
+                    <button @click="search=!search" class="text-base text-gray-500 hover:text-gray-900">
+                        {% render 'icon-search' -%}
+                    </button>
+                </div>
             </div>
-            <div class="flex flex-row gap-3 pr-[20px] z-40">
-                <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
-                    {% render 'icon-shopping-bag' %}
-                </a>
-                <a href="{{ routes.account_register_url }}" class="text-base text-gray-500 hover:text-gray-900">
-                    {% render 'icon-search' -%}
-                </a>
-            </div>
-        </div>
 
-        <menu x-bind:class='open ? "translate-y-[0px]" : ""'
-            class="md:hidden flex absolute -z-10 bg-[#e7d7b6] w-full -translate-y-[128px] transition-all ease-in-out duration-300 flex-col p-4">
-            {% for link in linklists['main-menu'].links %}
+            <menu x-bind:class='open ? "translate-y-[0px]" : ""'
+                class="lg:hidden flex absolute -z-10 bg-[#e7d7b6] w-full -translate-y-[128px] transition-all ease-in-out duration-300 flex-col p-4">
+                {% for link in linklists['main-menu'].links %}
                 <a href="{{ link.url }}">{{ link.title }}</a>
-            {% endfor %}
-        </menu>
-    </header>
+                {% endfor %}
+            </menu>
+        </header>
 
-    <header class="flex flex-col bg-[#F6F0E4] items-center w-full sticky top-[0px] z-50">
-        <div
-            class="hidden md:flex flex-row justify-between items-center w-full px-[104px] py-[28px]  max-w-[1280px]">
-            <div>
-                <a href="/">
-                    {% render 'logo-milk-denmark-large' %}
-                </a>
-            </div>
-            <div class="font-default font-bold text-[#282828] flex flex-row gap-[20px]">
+        <header class="hidden lg:flex flex-col bg-[#F6F0E4] items-center w-full sticky top-[0px] z-50">
+            <div class="absolute font-nanum font-bold text-[#282828] flex flex-row gap-[20px] py-[36px]">
                 {% for link in linklists['main-menu'].links %}
 
                 <a href="{{ link.url }}">{{ link.title }}</a>
@@ -77,21 +78,33 @@
                 <a href="">Wholesale</a>
                 <a href="">Contact</a> {% endcomment %}
             </div>
-            <div class="flex flex-row gap-[20px]">
-                <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
-                    {% render 'icon-shopping-bag' %}
-                </a>
-                <a href="{{ routes.account_login_url }}" class="text-base text-gray-500 hover:text-gray-900">
-                    {% render 'icon-user' -%}
-                </a>
-                <a href="{{ routes.account_register_url }}" class="text-base text-gray-500 hover:text-gray-900">
-                    {% render 'icon-search' -%}
-                </a>
+            <div
+                class="flex flex-row justify-between items-center w-full px-[104px] py-[20px] max-w-[1440px]">
+                <div>
+                    <a href="/">
+                        {% render 'logo-milk-denmark-large' %}
+                    </a>
+                </div>
+                <div class="flex flex-row gap-[20px]">
+                    <a href="{{ routes.cart_url }}"
+                        class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
+                        {% render 'icon-shopping-bag' %}
+                    </a>
+                    <a href="{{ routes.account_login_url }}" class="text-base text-gray-500 hover:text-gray-900">
+                        {% render 'icon-user' -%}
+                    </a>
+                    <button @click="search=!search" class="text-base text-gray-500 hover:text-gray-900">
+                        {% render 'icon-search' -%}
+                    </button>
+                </div>
             </div>
-        </div>
-    </header>
-    {{ content_for_layout }}
-    {% section 'footer' %}
+        </header>
+        {{ content_for_layout }}
+        {% section 'footer' %}
+
+    </div>
+
+    <script defer src="https://kit.fontawesome.com/8eae65e340.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
