--- a/sections/content-one.liquid
+++ b/sections/content-one.liquid
@@ -23,11 +23,11 @@
 
 <section class='h-auto w-full flex justify-center items-center content-1-bg relative -z-30'>
 	<div
-		class='absolute w-[150px] lg:w-[100px] h-[150px] md:h-[250px] bg-[#F6F0E4] left-1/3 md:left-[18%] lg:left-[14%] lg:h-[250px] xl:hidden z-0'></div>
+		class='absolute w-[150px] md:w-[300px] lg:w-[100px] h-[150px] md:h-[280px] bg-[#F6F0E4] left-1/3 md:left-[18%] lg:left-[14%] lg:h-[250px] xl:hidden z-[-2]'></div>
 	<div class='flex justify-center w-full py-[173px] relative z-0 md:hidden'>
 		{% render 'm-content-1' %}
 	</div>
-	<div class='hidden justify-center w-full py-[240px] relative -z-10 md:flex max-w-[1280px]'>
+	<div class='hidden justify-center w-full py-[240px] relative z-0 md:flex max-w-[1440px] px-[35px]'>
 		{% render 'd-content-1' %}
 	</div>
 </section>
