--- a/sections/content-two.liquid
+++ b/sections/content-two.liquid
@@ -7,10 +7,10 @@
 </style>
 
 <section class="w-full bg-white">
-    <div class="py-[64px] px-[25px] flex flex-col lg:flex-row gap-[40px] lg:gap-[52px] lg:p-[104px] max-w-[1280px] mx-auto">
-        <div class="content-two-bg h-[400px] min-[425px]:h-[440px] lg:h-auto lg:w-[45%] w-full rounded-2xl">
+    <div class="py-[64px] px-[25px] flex flex-col md:flex-row gap-[40px] md:gap-5 lg:gap-[56px] lg:p-[104px] max-w-[1440px] mx-auto">
+        <div class="content-two-bg h-[400px] md:h-[320px] md:w-[340px] min-[425px]:h-[440px] lg:h-[480px] lg:w-[45%] w-full rounded-2xl">
         </div>
-        <div class="flex flex-col gap-[24px] lg:w-[55%]">
+        <div class="flex flex-col justify-center gap-[24px] md:w-[360px] lg:w-[55%]">
             <div class="text-[28px] font-semibold leading-9 lg:text-[32px] lg:leading-10">
                 Designed with Heart
             </div>
